--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
                 <span class="w-2 h-2 bg-red-500 rounded-full animate-pulse"></span>
                 <span class="mono text-white font-bold uppercase text-sm tracking-tighter">SEC_PROFILE // KRISH_SHAH</span>
             </div>
-            <div class="flex gap-4">
-                <a href="#contact" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase">Establish_Link</a>
-            </div>
+            <a href="#contact" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase">Establish_Link</a>
         </div>
     </nav>
 
@@ -64,83 +62,59 @@
                         <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-500" style="width: 85%"></div></div>
                     </div>
                     <div>
-                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white"><span>Network Traffic Analysis</span><span>Intermediate</span></div>
+                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white"><span>Network Forensics</span><span>Intermediate</span></div>
                         <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-400" style="width: 75%"></div></div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between mb-2 text-xs mono uppercase text-white"><span>OSINT & Reconnaissance</span><span>Intermediate</span></div>
-                        <div class="h-1 w-full bg-slate-800 rounded-full"><div class="h-full bg-sky-600" style="width: 70%"></div></div>
                     </div>
                 </div>
             </div>
-
-            <div class="glass p-8 rounded-3xl border-l-4 border-amber-500 flex flex-col justify-center">
-                <h3 class="text-white font-bold mono text-sm uppercase mb-6 flex items-center gap-2">
+            <div class="glass p-8 rounded-3xl border-l-4 border-amber-500">
+                <h3 class="text-white font-bold mono text-sm uppercase mb-4 flex items-center gap-2">
                     <i data-lucide="award" class="text-amber-500 w-5 h-5"></i> Ongoing_Certification
                 </h3>
-                <div class="space-y-4">
-                    <div class="flex items-center gap-4">
-                        <div class="w-10 h-10 rounded-lg bg-amber-500/10 flex items-center justify-center">
-                            <i data-lucide="shield" class="text-amber-500 w-5 h-5 animate-pulse"></i>
-                        </div>
-                        <div>
-                            <p class="text-white font-bold text-lg">CompTIA Security+</p>
-                            <p class="text-xs text-amber-500 mono uppercase">Status: Exam Preparation / Deep Dive</p>
-                        </div>
-                    </div>
-                    <p class="text-xs text-slate-500 italic leading-relaxed">Focusing on threat vectors, cryptographic standards, and enterprise security operations.</p>
-                </div>
+                <p class="text-white font-bold text-lg">CompTIA Security+</p>
+                <p class="text-xs text-amber-500 mono uppercase mb-4">Status: In Progress</p>
+                <p class="text-xs text-slate-500 italic">Focusing on threat mitigation and secure network architecture.</p>
             </div>
         </div>
     </section>
 
     <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
-        <h2 class="mono text-emerald-500 text-[10px] mb-8 uppercase tracking-[0.5em] flex items-center gap-2">
-            <i data-lucide="activity" class="w-3 h-3"></i> Ongoing_Research (Tag: Cybersecurity)
-        </h2>
-        <div id="ongoing-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
+        <h2 class="mono text-emerald-500 text-[10px] mb-8 uppercase tracking-[0.5em]">Active_Research</h2>
+        <div id="ongoing-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm"></div>
     </section>
 
     <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
-        <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.5em] flex items-center gap-2">
-            <i data-lucide="archive" class="w-3 h-3"></i> Research_Archive
-        </h2>
+        <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.5em]">Research_Archive</h2>
         <div id="project-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm"></div>
     </section>
 
-    <section id="contact" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
+    <section id="contact" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900 bg-slate-950/20">
         <div class="grid lg:grid-cols-2 gap-16">
             <div>
                 <h2 class="mono text-sky-500 text-[10px] mb-4 uppercase tracking-[0.5em]">Secure_Communication</h2>
                 <h3 class="text-4xl font-black text-white mb-6 uppercase tracking-tighter">Establish a <span class="text-sky-500">Connection.</span></h3>
-                <p class="text-slate-400 leading-relaxed mb-8">Open for collaboration on security tools or entry-level roles.</p>
-                
-                <div class="space-y-6">
+                <div class="space-y-4 mb-8">
                     <div class="flex items-center gap-4 text-sm mono text-slate-300">
                         <i data-lucide="mail" class="text-sky-500 w-5 h-5"></i> Krishshah13579@gmail.com
                     </div>
                     <div class="flex items-center gap-4 text-sm mono text-slate-300">
-                        <i data-lucide="github" class="text-sky-500 w-5 h-5"></i> github.com/SHAHKRISHS
-                    </div>
-                    <div class="flex items-center gap-4 text-sm mono text-slate-300">
-                        <i data-lucide="map-pin" class="text-sky-500 w-5 h-5"></i> Ahmedabad, Gujarat, India
+                        <i data-lucide="map-pin" class="text-sky-500 w-5 h-5"></i> Ahmedabad, Gujarat
                     </div>
                 </div>
             </div>
-
-            <div class="glass p-8 rounded-3xl border-t border-sky-500/30">
+            <div class="glass p-8 rounded-3xl border border-sky-500/20">
                 <form action="https://formspree.io/f/mlgwolvv" method="POST" class="space-y-6">
                     <div>
                         <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Identify_Sender</label>
-                        <input type="text" name="name" required placeholder="Full Name" class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
+                        <input type="text" name="name" required placeholder="Name" class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
                     </div>
                     <div>
                         <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Return_Address</label>
-                        <input type="email" name="email" required placeholder="email@example.com" class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
+                        <input type="email" name="email" required placeholder="Email" class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
                     </div>
                     <div>
                         <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Encrypted_Message</label>
-                        <textarea name="message" required rows="4" placeholder="Type message..." class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition"></textarea>
+                        <textarea name="message" required rows="4" placeholder="Message..." class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition"></textarea>
                     </div>
                     <button type="submit" class="w-full bg-sky-500 hover:bg-white text-slate-950 font-black mono py-4 rounded-lg uppercase transition-all flex items-center justify-center gap-2">
                         Transmit_Data <i data-lucide="send" class="w-4 h-4"></i>
@@ -151,7 +125,7 @@
     </section>
 
     <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase">
-        © 2026 Krish Sandip Shah // Ahmedabad, India
+        © 2026 Krish Sandip Shah
     </footer>
 
     <script>
@@ -189,20 +163,13 @@
                     const isRecent = updatedAt > thirtyDaysAgo;
                     const topicsHTML = repo.topics.map(t => `<span class="topic-tag mono">${t}</span>`).join(' ');
                     
-                    const cardHTML = `
-                        <div class="glass p-8 rounded-2xl ${isRecent ? 'active-card shadow-lg shadow-emerald-500/5' : 'archive-card'} flex flex-col h-full border border-slate-800 transition-all hover:-translate-y-1">
-                            <div class="flex justify-between items-center mb-4">
-                                <span class="text-[9px] mono ${isRecent ? 'text-emerald-500' : 'text-sky-500'} font-bold">● ${isRecent ? 'LIVE_OPS' : 'ARCHIVE'}</span>
-                                <span class="text-[9px] mono text-slate-600 uppercase">${repo.language || 'Cyber'}</span>
-                            </div>
-                            <h3 class="text-lg font-bold text-white mb-2 uppercase">${repo.name.replace(/-/g, ' ')}</h3>
-                            <p class="text-xs text-slate-500 mb-6 flex-grow">${repo.description || 'Security module.'}</p>
-                            <div class="flex flex-wrap gap-2 mb-6">${topicsHTML}</div>
-                            <div class="flex justify-between items-center text-[9px] pt-4 border-t border-slate-900 mono uppercase">
-                                <span>Sync: ${updatedAt.toLocaleDateString()}</span>
-                                <a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white"><i data-lucide="external-link" class="w-4 h-4"></i></a>
-                            </div>
-                        </div>`;
+                    const cardHTML = `<div class="glass p-8 rounded-2xl ${isRecent ? 'active-card shadow-lg shadow-emerald-500/5' : 'archive-card'} flex flex-col h-full border border-slate-800 transition-all hover:-translate-y-1">
+                        <div class="flex justify-between items-center mb-4"><span class="text-[9px] mono ${isRecent ? 'text-emerald-500' : 'text-sky-500'} font-bold">● ${isRecent ? 'LIVE_OPS' : 'ARCHIVE'}</span><span class="text-[9px] mono text-slate-600 uppercase">${repo.language || 'Code'}</span></div>
+                        <h3 class="text-lg font-bold text-white mb-2 uppercase tracking-tight">${repo.name.replace(/-/g, ' ')}</h3>
+                        <p class="text-xs text-slate-500 mb-6 flex-grow">${repo.description || 'Security research module.'}</p>
+                        <div class="flex flex-wrap gap-2 mb-6">${topicsHTML}</div>
+                        <div class="flex justify-between items-center text-[9px] pt-4 border-t border-slate-900 mono uppercase"><span>Sync: ${updatedAt.toLocaleDateString()}</span><a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white"><i data-lucide="external-link" class="w-4 h-4"></i></a></div>
+                    </div>`;
                     if (isRecent) ongoingFeed.innerHTML += cardHTML;
                     else projectFeed.innerHTML += cardHTML;
                 });
